# ThymesisFlow

libthymesisflow/: CMakeLists.txt  Dockerfile  Makefile  README.md  thymesisf-agent@.service
libthymesisflow/cmd/: thymesisf-cli.c
libthymesisflow/include/: client.h  connection.h  protoconst.h  thymesisflow.h
libthymesisflow/src/: agent.c  connection.c  proto.c  thymesisflow.c  thymesisflow.c.orig  thymesisflow.c.rej
libthymesisflow/unittest/: unittest.c
